--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ h1 {
 /* Dropdown */
 .dropdown-menu {
    font-family: 'Ubuntu', sans-serif;
-   background-color: #CD104D;
+   background-color: #1b5058;
 }
 
 .dropdown-item {
